			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2690 2004/11/30 18:05:40 suz Exp $

<200411>
2004-12-01 SUZUKI, Shinsuke <suz@crl.hitachi.co.jp>
	* kame/kame/man/man4/ist.4, kame/sys/net/if_ist.[ch],
	  kame/sys/netinet6/{in6.h, in6_ifattach.c},
	  kame/kame/rtadvd, kame/kame/rtsold,
	  freebsd5/sbin/ifconfig:
	revived ISATAP, since the IPR issue has been solved!

2004-11-30  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd4/sys/netinet/tcp_subr.c (tcp_notify): implemented quick
	fall-back optimization as described in
	draft-gont-tcpm-tcp-soft-errors-01.

2004-11-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6: catch up draft-ietf-dhc-lifetime-02.
	Specifically,
	- renamed "lifetime" to "refreshtime".  Note that configuration
	  compatibility was lost.
	- implemented the default and minimum timer values
	- clarified that the refresh time option can only be available for
	  Information-request and reply exchanges

2004-11-28  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (res_queryN): set an
	appropriate limit of query timeouts in order to mitigate hopeless
	delay due to misbehaving DNS servers ignoring AAAA queries.
	getaddrinfo() now sends A queries first with this change, but the
	query ordering does not affect the ordering of the resulting
	addrinfo list.
	(FreeBSD only at the moment)

2004-11-27  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c (set_source): fixed a bug that
	deprecated source addresses were not correctly identified for
	address ordering (RFC3484).

2004-11-27  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/libinet6/getaddrinfo.c: suppress AAAA queries if the
	node does not have IPv6 addresses other than the loopback and
	link-local addresses.  Additionally, AI_ADDRCONFIG is now more
	specification compliant in that getaddrinfo() issues AAAA queries
	only when the node has non-loopback addresses.
